<resources>
    <string name="app_name">Refacstagram</string>
    <string name="login_email">전화번호, 사용자 이름 또는 이메일</string>
    <string name="login_paaword">비밀번호</string>
    <string name="login_facebook">Facebook으로 로그인</string>
    <string name="login_google">Google으로 로그인</string>
    <string name="google_web_client_id_token" translatable="false">799333621348-dtkai8fs216tqft8mcc26o1fk3m6e734.apps.googleusercontent.com</string>
    <string name="signup_email">이메일을 입력해주세요</string>
    <string name="signup_password">패스워드를 입력해주세요</string>

    <string name="facebook_app_id">246051157230180</string>
    <string name="fb_login_protocol_scheme">fb246051157230180</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="upload_image">사진업로드</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">팔로우</string>
    <string name="post">게시물</string>
    <string name="count_0">0</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="comment">댓글 달기..</string>
    <string name="default_notification_channel_id">default_notificaiton</string>

</resources>