<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation.UserFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.androidstudy.viewmodels.UserViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/fragment_user_iv_profile"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_account"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <android.widget.Button
                android:id="@+id/fragment_user_btn_follow"
                android:text="@string/follow"
                android:layout_toRightOf="@id/fragment_user_iv_profile"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <LinearLayout
                android:gravity="center"
                android:layout_toRightOf="@id/fragment_user_iv_profile"
                android:layout_above="@id/fragment_user_btn_follow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/fragment_user_tv_postcount"
                        android:text="@string/count_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/fragment_user_tv_followercount"
                        android:text="@string/count_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/fragment_user_tv_followingcount"
                        android:text="@string/count_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_user_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>