<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.androidstudy.viewmodels.LoginViewModel" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/actvitiy_login_et_email"
                android:text="@={viewmodel.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/actvitiy_login_et_password"
                android:text="@={viewmodel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_paaword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/activity_login_btn_login"
            android:onClick="@{() -> viewmodel.signInFirebase()}"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="35dp"
            android:background="@color/colorLightGray"
            android:text="로그인"
            android:textColor="@color/black"
            android:theme="@style/ButtonStyle"
            app:backgroundTint="#07BA5050"/>

        <android.widget.Button
            android:id="@+id/activity_login_btn_facebook"
            android:onClick="startFacebook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_signin_facebook"
            android:text="@string/login_facebook"
            android:textColor="@color/colorWhite"
            android:theme="@style/ButtonStyle" />

        <android.widget.Button
            android:id="@+id/actvitiy_login_btn_google"
            android:onClick="@{() -> viewmodel.signInGoogle()}"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_signin_google"
            android:text="@string/login_google"
            android:textColor="@color/colorWhite"
            android:theme="@style/ButtonStyle" />

        <android.widget.Button
            android:onClick="signUpRefacstagram"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="가입하기"
            android:textColor="@color/black"
            android:theme="@style/ButtonStyle"
            android:background="@color/colorLightGray"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>
</layout>